# japinput

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
installer/: install.ps1
plan/: README.md  phase1-romaji.md  phase2-dictionary.md  phase2-implementation.md  phase3-engine.md  phase3-implementation.md  phase4-implementation.md  phase4-tsf.md  phase5-candidate-ui.md  phase5-implementation.md  phase6-implementation.md  phase6-polish.md  phase7-mecab.md  phase7.5-emacs-keybind.md  phase8-ai-dict.md
src/: candidate.rs  class_factory.rs  config.rs  dictionary.rs  engine.rs  guids.rs  input_state.rs  katakana.rs  key_mapping.rs  lib.rs  main.rs  registry.rs  romaji.rs  text_service.rs  user_dictionary.rs
tests/fixtures/: test_dict.txt
